fixed bad manifest entry

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,6 +1,6 @@
 Name: owf
 Cartridge-Short-Name: Widget
-Cartridge-Vendor: shadow-soft
+Cartridge-Vendor: shadowsoft
 Cartridge-Version: '0.0.1'
 Compatible-Versions: ['0.0.2', '0.0.3']
 Display-Name: Ozone Widget
