--- a/bin/control
+++ b/bin/control
@@ -5,7 +5,7 @@ SCRIPT_PATH="`dirname \"$0\"`"              # relative
 SCRIPT_PATH="`( cd \"$SCRIPT_PATH\" && pwd )`" 
 
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
-source ${OPENSHIFT_OWF_DIR}/bin/util
+source ${OPENSHIFT_WIDGET_DIR}/bin/util
 
 if ! [ $# -eq 1 ]
 then
@@ -13,9 +13,9 @@ then
     exit 1
 fi
 
-source ${OPENSHIFT_OWF_DIR}/bin/util
+source ${OPENSHIFT_WIDGET_DIR}/bin/util
 
-JBOSS_PID_FILE="${OPENSHIFT_OWF_DIR}/run/jboss.pid"
+JBOSS_PID_FILE="${OPENSHIFT_WIDGET_DIR}/run/jboss.pid"
 
 # Kill the process given by $1 and its children
 killtree() {
@@ -47,8 +47,8 @@ function ishttpup() {
     let count=0
     while [ ${count} -lt 64 ]
     do
-        if /usr/sbin/lsof -P -n -i "@${OPENSHIFT_OWF_IP}:${OPENSHIFT_OWF_HTTP_PORT}" | grep "(LISTEN)" > /dev/null; then
-            echo "Found ${OPENSHIFT_OWF_IP}:${OPENSHIFT_OWF_HTTP_PORT} listening port"
+        if /usr/sbin/lsof -P -n -i "@${OPENSHIFT_WIDGET_IP}:${OPENSHIFT_WIDGET_HTTP_PORT}" | grep "(LISTEN)" > /dev/null; then
+            echo "Found ${OPENSHIFT_WIDGET_IP}:${OPENSHIFT_WIDGET_HTTP_PORT} listening port"
             return 0
         fi
         let count=${count}+1
@@ -63,11 +63,11 @@ function start_app() {
         echo "The jbossews cartridge is already running" 1>&2
     else
         # Start
-        export CATALINA_HOME=$OPENSHIFT_OWF_DIR
-        export CATALINA_BASE=$OPENSHIFT_OWF_DIR
-        export CATALINA_TMPDIR=${OPENSHIFT_OWF_DIR}/tmp
+        export CATALINA_HOME=$OPENSHIFT_WIDGET_DIR
+        export CATALINA_BASE=$OPENSHIFT_WIDGET_DIR
+        export CATALINA_TMPDIR=${OPENSHIFT_WIDGET_DIR}/tmp
 
-        ${OPENSHIFT_OWF_DIR}/bin/tomcat start > ${OPENSHIFT_OWF_DIR}/logs/jbossews.log 2>&1 &
+        ${OPENSHIFT_WIDGET_DIR}/bin/tomcat start > ${OPENSHIFT_WIDGET_DIR}/logs/jbossews.log 2>&1 &
         PROCESS_ID=$!
 
         echo $PROCESS_ID > $JBOSS_PID_FILE
@@ -111,7 +111,7 @@ function tidy() {
   client_message "Emptying log dir: $OPENSHIFT_JBOSSEWS_LOG_DIR"
   shopt -s dotglob
   rm -rf $OPENSHIFT_JBOSSEWS_LOG_DIR/*
-  rm -rf $OPENSHIFT_OWF_DIR/tmp/*
+  rm -rf $OPENSHIFT_WIDGET_DIR/tmp/*
 }
 
 # Reconstruct JAVA_HOME and PATH based on the current version/marker selection
@@ -148,15 +148,15 @@ case "$1" in
             exit 0
         fi
 
-        client_result "The jbossews cartridge is running."
+        client_result "The widget cartridge is running."
         exit 0
     ;;
     build)
-        ${OPENSHIFT_OWF_DIR}/bin/build
+        ${OPENSHIFT_WIDGET_DIR}/bin/build
         exit 0
     ;;
     deploy)
-        ${OPENSHIFT_OWF_DIR}/bin/deploy
+        ${OPENSHIFT_WIDGET_DIR}/bin/deploy
         exit 0
     ;;
     update-configuration)
