--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -19,34 +19,34 @@ Website: https://shadow-soft.com
 Help-Topics:
   "Developer Center": https://bitbucket.org/pvm-engineering/owf-cartridge/overview
 Cart-Data:
-  - Key: WIDGET_JBOSSEWS_LOG_DIR
+  - Key: OPENSHIFT_JBOSSEWS_LOG_DIR
     Type: environment
     Description: "Directory to store application log files."
-  - Key: WIDGET_TMP_DIR
+  - Key: OPENSHIFT_TMP_DIR
     Type: environment
     Description: "Directory to store application temporary files."
-  - Key: WIDGET_REPO_DIR
+  - Key: OPENSHIFT_REPO_DIR
     Type: environment
     Description: "Application root directory where application files reside. This directory is reset every time you do a git-push"
-  - Key: WIDGET_JBOSSEWS_HTTP_PORT
+  - Key: OPENSHIFT_JBOSSEWS_HTTP_PORT
     Type: environment
     Description: "Internal port to which the web-framework binds to."
-  - Key: WIDGET_JBOSSEWS_IP
+  - Key: OPENSHIFT_JBOSSEWS_IP
     Type: environment
     Description: "Internal IP to which the web-framework binds to."
-  - Key: WIDGET_APP_DNS
+  - Key: OPENSHIFT_APP_DNS
     Type: environment
     Description: "Fully qualified domain name for the application."
-  - Key: WIDGET_APP_NAME
+  - Key: OPENSHIFT_APP_NAME
     Type: environment
     Description: "Application name"
-  - Key: WIDGET_DATA_DIR
+  - Key: OPENSHIFT_DATA_DIR
     Type: environment
     Description: "Directory to store application data files. Preserved across git-pushes. Not shared across gears."
-  - Key: WIDGET_APP_UUID
+  - Key: OPENSHIFT_APP_UUID
     Type: environment
     Description: "Unique ID which identified the application. Does not change between gears."
-  - Key: WIDGET_GEAR_UUID
+  - Key: OPENSHIFT_GEAR_UUID
     Type: environment
     Description: "Unique ID which identified the gear. This value changes between gears."
 Provides:
