fixed the source-url

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -2,7 +2,7 @@ Name: widget
 Cartridge-Short-Name: Widget
 Cartridge-Vendor: shadowsoft
 Cartridge-Version: '0.0.1'
-Source-Url: https://raw.github.com/bretfrederick-pvm/owf-widget-cartridge/master/metadata/manifest.yml
+Source-Url: https://github.com/bretfrederick-pvm/owf-widget-cartridge.git
 Compatible-Versions: ['0.0.2', '0.0.3']
 Display-Name: Ozone Widget
 Description: "Build and deploy Ozone Widgets in the cloud."
